feat: update the tarification module
